--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.13.1
 bidict==0.23.1
 blinker==1.7.0
+cffi==1.16.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
@@ -9,6 +10,8 @@ Flask-Migrate==4.0.5
 Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
+gevent==24.2.1
+gevent-websocket==0.10.1
 greenlet==3.0.3
 gunicorn==21.2.0
 h11==0.14.0
@@ -18,6 +21,7 @@ Mako==1.3.2
 MarkupSafe==2.1.5
 packaging==23.2
 psycopg2==2.9.9
+pycparser==2.21
 python-dotenv==1.0.1
 python-engineio==4.9.0
 python-socketio==5.11.1
@@ -27,3 +31,5 @@ typing_extensions==4.9.0
 Werkzeug==3.0.1
 wsproto==1.2.0
 WTForms==3.1.2
+zope.event==5.0
+zope.interface==6.2
