--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ Flask-Login==0.6.3
 Flask-Migrate==4.0.5
 Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 gevent==24.2.1
-gevent-websocket==0.10.1
 greenlet==3.0.3
 gunicorn==21.2.0
 h11==0.14.0
@@ -21,6 +21,7 @@ MarkupSafe==2.1.5
 packaging==23.2
 psycopg2==2.9.9
 pycparser==2.21
+python-dotenv==1.0.1
 python-engineio==4.9.0
 python-socketio==5.11.1
 simple-websocket==1.0.0
