--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,3 +1,5 @@
+# syntax=docker/dockerfile:1
+
 # Use the official Python image as the base image
 FROM python:3.9.5-slim-buster
 
@@ -8,7 +10,6 @@ WORKDIR /app
 COPY remote_requirements.txt .
 
 # Install the required Python packages
-RUN pip install psycopg2-binary
 RUN pip install -r remote_requirements.txt
 
 # Copy the rest of the application code into the container
@@ -18,4 +19,4 @@ COPY . .
 EXPOSE 5000
 
 # Start the Flask app
-CMD ["python", "myapp.py"]
+CMD [ "gunicorn", "-b", ":5000", "-k" , "geventwebsocket.gunicorn.workers.GeventWebSocketWorker", "-w", "1", "myapp:app"]
